<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:stretchColumns="1"
    android:weightSum="100">
    <!-- WeightSum define a soma total da weight, utilizada para fazer alturas proporcionais a esse total -->
    <TableRow
        android:layout_weight="20">
        <!-- layout_weight define a proporção da altura em relação ao total (weightSum) -->
        <TextView android:id="@+id/view_message"
            android:layout_span="2"
            android:text="@string/oba"
            android:padding="3dip" />
        <!-- layout_span junta as colunas do tablerow (no caso, a coluna 0, 1 e 2) -->
    </TableRow>

    <TableRow android:layout_weight="20">

        <TextView
            android:id="@+id/edit_message"
            android:layout_span="2"
            android:padding="3dip"
            android:text="@string/obamor"/>
    </TableRow>

    <TableRow android:layout_weight="10">

        <EditText
            android:id="@+id/edit_number"
            android:layout_span="2"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="3dip"/>
    </TableRow>

    <TableRow
        android:layout_weight="50"
        android:gravity="bottom|center_vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_column="0"
            android:weightSum="100"
            android:gravity="start">
            <!-- aqui foi criado um novo weightSum pq eh um novo TableLayout -->
            <!-- note que esse TableLayout faz parte de um TableRow, e ocupa a coluna 0 do TableRow-->


            <TableRow
                android:layout_width="52dp"
                android:layout_weight="50">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/button_alert"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_column="0"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="3dip"
                    android:src="@android:drawable/ic_dialog_alert"
                    android:text="@string/alert"
                    app:backgroundTint="?attr/colorError"
                    tools:ignore="VectorDrawableCompat" />
            </TableRow>

            <TableRow android:layout_weight="50">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/button_backspace"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_column="0"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="3dip"
                    android:text="@string/backspace"
                    app:backgroundTint="@android:color/holo_orange_dark"
                    app:srcCompat="@android:drawable/ic_input_delete" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:gravity="center">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/button_morse"
                android:layout_width="208dp"
                android:layout_height="226dp"
                android:clickable="true"
                android:cropToPadding="true"
                android:focusable="true"
                app:backgroundTint="@android:color/holo_red_dark"
                app:srcCompat="@android:drawable/divider_horizontal_bright" />
            <!-- esse botão acupa a coluna 1-->
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_column="0"
            android:weightSum="100"
            android:gravity="end">
            <!-- dnv, mais um TableLayout dentro de do msm TableRow, mas ocupando a coluna 2 -->

            <TableRow
                android:layout_width="52dp"
                android:layout_weight="50">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/button_enviar"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_column="0"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="3dip"
                    android:text="@string/send"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@android:drawable/ic_menu_send" />
            </TableRow>

            <TableRow
                android:layout_width="52dp"
                android:layout_weight="50">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/button_space"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_column="0"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="3dip"
                    android:text="@string/space"
                    app:backgroundTint="@android:color/holo_green_dark"
                    app:srcCompat="?attr/editTextBackground" />
            </TableRow>
        </TableLayout>

    </TableRow>

</TableLayout>
